--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
 
-    <title>Sales Certified View</title>
+    <h1>Sales Certified View</h1>
 
     <style>
 	
