--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-
+	
+    <title>Sales Certified View</title>  
     <h1>Sales Certified View</h1>
 
     <style>
