Fixes to vertical transformation

--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@ function update(source) {
   // Transition nodes to their new position.
   var nodeUpdate = node.transition()
 	  .duration(duration)
-	  .attr("transform", function(d) { return "translate(" + d.y + "," + d.x + ")"; });
+	  .attr("transform", function(d) { return "translate(" + d.x + "," + d.y + ")"; });
   nodeUpdate.select("circle")
 	  .attr("r", 10)
 	  .style("fill", function(d) { return d._children ? "lightsteelblue" : "#fff"; });
@@ -213,7 +213,7 @@ function update(source) {
   // Transition exiting nodes to the parent's new position.
   var nodeExit = node.exit().transition()
 	  .duration(duration)
-	  .attr("transform", function(d) { return "translate(" + source.y + "," + source.x + ")"; })
+	  .attr("transform", function(d) { return "translate(" + source.x + "," + source.y + ")"; })
 	  .remove();
   nodeExit.select("circle")
 	  .attr("r", 1e-6);
