Revert "Update index.html"
This reverts commit b6302f5bd87766ca28630e1f39f44d46f3c52c70.

--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@ function update(source) {
   link.enter().insert("path", "g")
 	  .attr("class", "link")
 	  .attr("d", function(d) {
-		var o = {x: source.y0, y: source.x0};
+		var o = {x: source.x0, y: source.y0};
 		return diagonal({source: o, target: o});
 	  });
   // Transition links to their new position.
