--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@ function update(source) {
   nodeEnter.append("text")
 	  .attr("y", function(d) { return d.children || d._children ? -18 : 18; })
 	  .attr("dy", ".35em")
-	  .attr("text-anchor", middle)
+	  .attr("text-anchor", function(d) { return d.children || d._children ? "end" : "start"; })
 	  .text(function(d) { return d.name; })
 	  .style("fill-opacity", 1e-6);
   // Transition nodes to their new position.
