Revert "Update index.html"
This reverts commit 34dfa6d66b67ed5c7530d162191b0a19bda78ee6.

--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@ function update(source) {
 	  .attr("r", 1e-6)
 	  .style("fill", function(d) { return d._children ? "lightsteelblue" : "#fff"; });
   nodeEnter.append("text")
-	  .attr("y", function(d) { return d.children || d._children ? -18 : 18; })
+	  .attr("x", function(d) { return d.children || d._children ? -13 : 13; })
 	  .attr("dy", ".35em")
 	  .attr("text-anchor", function(d) { return d.children || d._children ? "end" : "start"; })
 	  .text(function(d) { return d.name; })
