--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@ function update(source) {
 	  .style("fill", function(d) { return d._children ? "lightsteelblue" : "#fff"; });
   nodeEnter.append("text")
 	  .attr("y", function(d) { return d.children || d._children ? -15 : 15; })
-	  .attr("dy", ".35em")
+	  .attr("dx", ".35em")
 	  .attr("text-anchor", function(d) { return d.children || d._children ? "end" : "start"; })
 	  .text(function(d) { return d.name; })
 	  .style("fill-opacity", 1e-6);
