--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@ var treeData = [
 // ************** Generate the tree diagram	 *****************
 var margin = {top: 20, right: 120, bottom: 20, left: 120},
 	width = 1500 - margin.right - margin.left,
-	height = 800 - margin.top - margin.bottom;
+	height = 1000 - margin.top - margin.bottom;
 	
 var i = 0,
 	duration = 750,
@@ -173,7 +173,7 @@ var svg = d3.select("body").append("svg")
   .append("g")
 	.attr("transform", "translate(" + margin.left + "," + margin.top + ")");
 root = treeData[0];
-root.x0 = height / 2;
+root.x0 = width / 2;
 root.y0 = 0;
   
 update(root);
