--- a/index.html
+++ b/index.html
@@ -1,264 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
   <head>
-    <meta charset="utf-8">
-	
-    <title>Sales Certified View</title>  
-    <h3>Sales Certified View</h3>
-
-    <style>
-	
-	.node {
-		cursor: pointer;
-	}
-	.node circle {
-	  fill: #fff;
-	  stroke: steelblue;
-	  stroke-width: 3px;
-	}
-	.node text {
-	  font: 8px century gothic;
-	}
-	.link {
-	  fill: none;
-	  stroke: #ccc;
-	  stroke-width: 2px;
-	}
-	
-    </style>
-
+    <title>My GitHub Page</title>
   </head>
-
   <body>
-
-<!-- load the d3.js library -->	
-<script src="http://d3js.org/d3.v3.min.js"></script>
-	
-<script>
-var treeData = [
-  {
-    "name": "Sales Certified View",
-    "parent": "null",
-    "children": [
-      {
-        "name": "Q_PL_LOC_STR_TYPE_V",
-        "parent": "Sales Certified View",
-        "children": [
-          {
-            "name": "Son of Q_PL_LOC_STR_TYPE_V",
-            "parent": "Q_PL_LOC_STR_TYPE_V"
-          },
-          {
-            "name": "Daughter of Q_PL_LOC_STR_TYPE_V",
-            "parent": "Q_PL_LOC_STR_TYPE_V"
-          }
-        ]
-      },
-      {
-        "name": "Q_PL_PRD_SBU_V",
-		"parent": "Sales Certified View",
-		"children": [
-			{
-				"name":"Son Q_PL_PRD_SBU_V",
-				"parent":"Q_PL_PRD_SBU_V"
-			},
-			{
-				"name":"Daughter of Q_PL_PRD_SBU_V",
-				"parent":"QL_PL_PRD_SBU_V"
-			}
-		]
-	  },
-	  {
-		"name":"Q_QF_SLS_SKU_STR_D_V",
-		"parent":"Sales Certified View",
-		"children": [
-			{
-				"name":"Son of Q_QF_SLS_SKU_STR_D_V",
-				"parent":"Q_QF_SLS_SKU_STR_D_V"
-			},
-			{
-				"name":"Daughter of Q_QF_SLS_SKU_STR_D_V",
-				"parent":"Q_QF_SLS_SKU_STR_D_V"
-			}
-		]
-	  },
-	  {
-		  "name":"Q_QL_CAL_DT_V",
-		  "parent":"Sales Certified View",
-		  "children": [
-			  {
-				  "name":"Son of Q_QL_CAL_DT_V",
-				  "parent":"Q_QL_CAL_DT_V"
-			  },
-			  {
-				  "name":"Daughter of Q_QL_CAL_DT_V",
-				  "parent":"Q_QL_CAL_DT_V"
-			  }
-		  ]
-	  },
-	  {
-		  "name":"Q_QL_ESELL_TRANS_TYPE",
-		  "parent":"Sales Certified View",
-		  "children": [
-			  {
-				  "name":"Son of Q_QL_ESELL_TRANS_TYPE",
-				  "parent":"Q_QL_ESELL_TRANS_TYPE"
-			  },
-			  {
-				  "name":"Daughter of Q_QL_ESELL_TRANS_TYPE",
-				  "parent":"Q_QL_ESELL_TRANS_TYPE"
-			  }
-		  ]
-	  },
-	  {
-		  "name":"Q_QL_LOC_STR_V",
-		  "parent":"Sales Certified View",
-		  "children": [
-			  {
-				  "name":"Son of Q_QL_LOC_STR_V",
-				  "parent":"Q_QL_LOC_STR_V"
-			  },
-			  {
-				  "name":"Daughter of Q_QL_LOC_STR_V",
-				  "parent":"Q_QL_LOC_STR_V"
-			  }
-		  ]
-	  },
-	  {
-		  "name":"Q_QL_PRD_MD_TYP_V",
-		  "parent":"Sales Certified View",
-		  "children": [
-			  {
-				  "name":"Son of Q_QL_PRD_MD_TYP_V",
-				  "parent": "Q_QL_PRD_MD_TYP_V"
-			  },
-			  {
-				  "name":"Daughter of Q_QL_PRD_MD_TYP_V",
-				  "parent":"Q_QL_PRD_MD_TYP_V"
-			  }
-		  ]
-	  },
-	  {
-		  "name":"Q_QL_PRD_SKU_BU_V",
-		  "parent":"Sales Certified View",
-		  "children": [
-			  {
-				  "name":"Son of Q_QL_PRD_SKU_BU_V",
-				  "parent":"Q_QL_PRD_SKU_BU_V"
-			  },
-			  {
-				  "name":"Daughter of Q_QL_PRD_SKU_BU_V",
-				  "parent":"Q_QL_PRD_SKU_BU_V"
-			  }
-		  ]
-	  }
-    ]
-  }
-];
-// ************** Generate the tree diagram	 *****************
-var margin = {top: 20, right: 120, bottom: 20, left: 120},
-	width = 1500 - margin.right - margin.left,
-	height = 900 - margin.top - margin.bottom;
-	
-var i = 0,
-	duration = 750,
-	root;
-var tree = d3.layout.tree()
-	.size([height, width]);
-var diagonal = d3.svg.diagonal()
-	.projection(function(d) { return [d.x, d.y]; });
-var svg = d3.select("body").append("svg")
-	.attr("width", width + margin.right + margin.left)
-	.attr("height", height + margin.top + margin.bottom)
-  .append("g")
-	.attr("transform", "translate(" + margin.left + "," + margin.top + ")");
-root = treeData[0];
-root.x0 = width / 2;
-root.y0 = 0;
-  
-update(root);
-d3.select(self.frameElement).style("height", "500px");
-function update(source) {
-  // Compute the new tree layout.
-  var nodes = tree.nodes(root).reverse(),
-	  links = tree.links(nodes);
-  // Normalize for fixed-depth.
-  nodes.forEach(function(d) { d.y = d.depth * 100; });
-  // Update the nodes…
-  var node = svg.selectAll("g.node")
-	  .data(nodes, function(d) { return d.id || (d.id = ++i); });
-  // Enter any new nodes at the parent's previous position.
-  var nodeEnter = node.enter().append("g")
-	  .attr("class", "node")
-	  .attr("transform", function(d) { return "translate(" + source.x0 + "," + source.y0 + ")"; })
-	  .on("click", click);
-  nodeEnter.append("circle")
-	  .attr("r", 1e-6)
-	  .style("fill", function(d) { return d._children ? "lightsteelblue" : "#fff"; });
-  nodeEnter.append("text")
-	  .attr("y", function(d) { return d.children || d._children ? -5 : 5; })
-	  .attr("dx", ".35em")
-	  .attr("text-anchor", function(d) { return d.children || d._children ? "end" : "start"; })
-	  .text(function(d) { return d.name; })
-	  .style("fill-opacity", 1e-6);
-  // Transition nodes to their new position.
-  var nodeUpdate = node.transition()
-	  .duration(duration)
-	  .attr("transform", function(d) { return "translate(" + d.x + "," + d.y + ")"; });
-  nodeUpdate.select("circle")
-	  .attr("r", 10)
-	  .style("fill", function(d) { return d._children ? "lightsteelblue" : "#fff"; });
-  nodeUpdate.select("text")
-	  .style("fill-opacity", 1);
-  // Transition exiting nodes to the parent's new position.
-  var nodeExit = node.exit().transition()
-	  .duration(duration)
-	  .attr("transform", function(d) { return "translate(" + source.x + "," + source.y + ")"; })
-	  .remove();
-  nodeExit.select("circle")
-	  .attr("r", 1e-6);
-  nodeExit.select("text")
-	  .style("fill-opacity", 1e-6);
-  // Update the links…
-  var link = svg.selectAll("path.link")
-	  .data(links, function(d) { return d.target.id; });
-  // Enter any new links at the parent's previous position.
-  link.enter().insert("path", "g")
-	  .attr("class", "link")
-	  .attr("d", function(d) {
-		var o = {x: source.x0, y: source.y0};
-		return diagonal({source: o, target: o});
-	  });
-  // Transition links to their new position.
-  link.transition()
-	  .duration(duration)
-	  .attr("d", diagonal);
-  // Transition exiting nodes to the parent's new position.
-  link.exit().transition()
-	  .duration(duration)
-	  .attr("d", function(d) {
-		var o = {x: source.x, y: source.y};
-		return diagonal({source: o, target: o});
-	  })
-	  .remove();
-  // Stash the old positions for transition.
-  nodes.forEach(function(d) {
-	d.x0 = d.x;
-	d.y0 = d.y;
-  });
-}
-// Toggle children on click.
-function click(d) {
-  if (d.children) {
-	d._children = d.children;
-	d.children = null;
-  } else {
-	d.children = d._children;
-	d._children = null;
-  }
-  update(d);
-}
-</script>
-	
+    <h1>Welcome to My GitHub Page!</h1>
+    <p>This is my first website hosted on GitHub Pages.</p>
   </body>
 </html>
